<resources>
    <!-- keep in alphabetical order please!! -->


    <!-- General string resources -->
    <string name="admin">Admin</string>
    <string name="app_name" translatable="false">Build-a-bridge</string>
    <string name="cancel">Cancel</string>
    <string name="check_verification">Check Verification</string>
    <string name="create_request">Create Request</string>
    <string name="delete">Delete</string>
    <string name="delete_skill">Delete Skill</string>
    <string name="delete_skill_prompt">Are you sure you want to delete this skill?</string>
    <string name="done">Done</string>
    <string name="email_verification">A verification email has been sent to your address. It is required that you verify the address provided before continuing\n\n\n\n\nNot receiving the email?\n\nClick the button below to resend</string>
    <string name="email_not_verified_toast">Address has not been verified. Try again in a moment or re-verify</string>
    <string name="empty_admin_skills_list">No skills have been added yet.\n\nAdd one with the \'+\' button</string>
    <string name="empty_conversations_list">No messages found</string>
    <string name="empty_request_feed">No requests found in your area based on the selected skills.\n\nUpdate your selected skills or check back later</string>
    <string name="empty_requests_list">You have not accepted or made any requests yet.\n\nOnce you do they will appear here</string>
    <string name="empty_skills_filter">Must select at least one skill</string>
    <string name="empty_skills_fragment_list">No skills exist within the system. Check back soon</string>
    <string name="enter_message">Enter message</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">459412514480213</string>
    <string name="facebook_login_protocol_scheme" translatable="false">ffb459412514480213</string>
    <string name="failed_creating_conversation">Could not create new conversation. Try again</string>
    <string name="feed">Feed</string>
    <string name="filter">Filter</string>
    <string name="finish_request">Finish Request</string>
    <string name="first_name">First Name</string>
    <string name="friends">Friends</string>
    <string name="help">Help</string>
    <string name="invalid_character">Invalid character</string>
    <string name="last_name">Last Name</string>
    <string name="login_progress_label">Getting your account ready</string>
    <string name="manage_skills">Manage Skills</string>
    <string name="message">Message</string>
    <string name="message_channel_name">Messages</string>
    <string name="message_notification_channel_id" translatable="false">fcm_message_channel</string>
    <string name="messages">Messages</string>
    <string name="more_options">More Options</string>
    <string name="must_add_description">Must add description</string>
    <string name="must_specify_name">Must specify a name</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="please_select_region">Please select a region</string>
    <string name="please_select_state">Please select a state</string>
    <string name="phone_number_error">Numbers Only</string>
    <string name="phone_number_optional">Phone Number (optional)</string>
    <string name="photo_upload_failure">Problem uploading photo, try again</string>
    <string name="photo_upload_success">Photo uploaded successfully</string>
    <string name="rating_label">How would you rate %1$s\'s help?</string>
    <string name="refugee_immigrant_choice_label">I AM A REFUGEE / IMMIGRANT</string>
    <string name="refugee_immigrant_choice_hint">Are you new to the country? Let us help you settle in and build a new home</string>
    <string name="region">Region</string>
    <string name="requested">Requested</string>
    <string name="requester">Requester</string>
    <string name="request_description">Request Description</string>
    <string name="request_details_length_error">Details cannot exceed 2000 characters</string>
    <string name="request_title">Request Title</string>
    <string name="request_title_length_error">Title cannot exceed 40 characters</string>
    <string name="requests">Requests</string>
    <string name="role_label">Your Role: %1$s</string>
    <string name="save">Save</string>
    <string name="select_picture">Select Picture</string>
    <string name="select_region">Select Region</string>
    <string name="select_state">Select State</string>
    <string name="select_skill">Select a Skill</string>
    <string name="send">Send</string>
    <string name="send_email">Send Email</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="skill_description">Skill Description</string>
    <string name="skill_name">Skill Name</string>
    <string name="skills">Skills</string>
    <string name="skills_admin">Skills - Admin</string>
    <string name="state">State</string>
    <string name="status_label">Status: %1$s</string>
    <string name="volunteer_choice_label">I AM A VOLUNTEER</string>
    <string name="volunteer_choice_hint">Are you willing to help? From sparing a few hours a week to sponsoring a family.\nEvery bit helps</string>
    <string name="who_are_you">Who are you?</string>
    <string name="yes">Yes</string>
    <string name="in_progress">In Progress</string>
    <string name="volunteer">Volunteer</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="profile">Profile</string>


    <!-- string resources for admin pages -->


    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="new_york_regions">
        <item>Albany</item>
        <item>Buffalo</item>
        <item>Mt. Vernon</item>
        <item>New York City</item>
        <item>Rochester</item>
        <item>Schenectady</item>
        <item>Syracuse</item>
        <item>Yonkers</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
