<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_feed"
            android:title="@string/feed" />

        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_request"
            android:title="@string/requests" />

        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_skills"
            android:title="@string/skills" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/friends" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out" />


        <item android:title="@string/admin">

            <menu>
                <item
                    android:id="@+id/nav_admin_skills"
                    android:title="@string/manage_skills" />
            </menu>
        </item>
    </group>

</menu>